--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
   "apiKeys": [
     "AIzaSyBKMRMYEiUIePp2IKzBNgCaxVLgFhjMSlQ",
-    "AIzaSyCXd3M-Cb0KvyBMKTNS23nfaoiez6l51Go",
-    "AIzaSyAYnNH4aaQ0Kqdzh0VL4sMGvGWfYzs_sDU"
-  ]
+    /* "AIzaSyCXd3M-Cb0KvyBMKTNS23nfaoiez6l51Go",
+    "AIzaSyAYnNH4aaQ0Kqdzh0VL4sMGvGWfYzs_sDU" */
+  ],
+  "apiUrl": "http://lifeofcoding.online/"
 }
