--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-paper": "^2.11.0",
     "react-native-simple-download-manager": "^1.4.1",
     "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^3.2.3",
     "rn-fetch-blob": "^0.10.15",
     "sanitize-filename": "^1.6.1",
     "slugify": "^1.3.4",
