--- a/package.json
+++ b/package.json
@@ -17,15 +17,21 @@
     "@shoutem/ui": "^0.23.12",
     "expo": "^30.0.1",
     "expo-font": "^2.0.0",
+    "flux": "^3.1.3",
     "react": "^16.8.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native": "^0.55.4",
+    "react-native-animatable": "^1.3.1",
     "react-native-audio-streamer": "0.0.9",
     "react-native-easy-downloader": "0.0.4",
     "react-native-elements": "^0.19.1",
     "react-native-git-upgrade": "^0.2.7",
+    "react-native-music-control": "^0.9.9",
     "react-native-paper": "^2.11.0",
     "react-native-simple-download-manager": "^1.4.1",
+    "react-native-slider": "^0.11.0",
+    "react-native-track-player": "^1.1.2",
     "react-native-vector-icons": "^4.6.0",
+    "react-native-video": "^4.3.1",
     "react-navigation": "^3.2.3",
     "rn-fetch-blob": "^0.10.15",
     "sanitize-filename": "^1.6.1",
