--- a/config.json
+++ b/config.json
@@ -4,5 +4,5 @@
     /* "AIzaSyCXd3M-Cb0KvyBMKTNS23nfaoiez6l51Go",
     "AIzaSyAYnNH4aaQ0Kqdzh0VL4sMGvGWfYzs_sDU" */
   ],
-  "apiUrl": "https://hxc-youtube-api.herokuapp.com/"
+  "apiUrl": "http://lifeofcoding.online/"
 }
