--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-animatable": "^1.3.1",
     "react-native-audio-streamer": "0.0.9",
     "react-native-easy-downloader": "0.0.4",
+    "react-native-easy-toast": "^1.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-git-upgrade": "^0.2.7",
     "react-native-music-control": "^0.9.9",
